Added more verbose warning if playing in singleplayer and command was used